<resources>
    <string name="app_name">Wegpunkte</string>
    <string name="app_label">Wegpunkte</string>
    <string name="search_hint">Suchen</string>
    <string name="location_permission_denied_message">Die Standortberechtigung wurde nicht erteilt. Bitte aktiviere die Berechtigung in den Einstellungen.</string>
    <string name="title_activity_waypoint_detail_host">Wegpunkte</string>
    <string name="title_waypoint_list">Wegpunkte</string>
    <string name="title_waypoint_detail">Wegpunkte</string>
    <string name="locationPermissionDialogTitle">Zugriff auf Position</string>
    <string name="locationPermissionDialogText">Der Zugriff auf deine Position wird gebraucht, um dir die Entfernung zu den Wegpunkten anzuzeigen.</string>
    <string name="storagePermissionDialogTitle">Zugriff auf den Speicher</string>
    <string name="storagePermissionDialogText">Der Zugriff auf den Speicher wird gebraucht, um dir die eine Karte der Umgebung des POIs anzuzeigen.</string>
    <string name="searchHint">Suchen</string>
    <string name="toolbarImageContentDescription">Bild auf Titelleiste</string>
    <string name="description">Beschreibung</string>
    <string name="coordinates">Koordinaten</string>
    <string name="distance">Entfernung</string>
    <string name="showOnAndroidMap">{mdi-android} In App öffnen</string>
    <string name="showOnLocalMap">{md-map} Auf Karte zeigen</string>
    <string name="title_waypoint_maps">Karte</string>
    <string name="transitionWaypointTitle">transition_waypoint_title</string>
    <string name="privacy">Datenschutz</string>
    <string name="navigation_drawer_open">Menü öffnen</string>
    <string name="navigation_drawer_close">Menü schließen</string>
    <string name="privacyDisclaimer">Datenschutzerklärung</string>
    <string name="privacyDisclaimerText" />
    <string name="legalNotice">Über</string>
    <string name="not_shared_with">Mit wem wir deine Daten <u>nicht teilen</u></string>
    <string name="shared_with">Welche Daten wir <u>teilen und warum</u></string>
    <string name="data_gathered">Welche Daten wir <u>verarbeiten und warum</u></string>
    <string name="permissions_needed">Welche <u>Berechtigungen</u> wir brauchen und warum</string>
    <string name="shared_with_osm_description"><b>OpenStreetMap</b>\nUm eine Kartenvorschau des gewählten Wegpunktes anzuzeigen</string>
    <string name="permission_location_description"><b>{md-map} Position</b>\nUm die Entfernung zum Wegpunkt anzuzeigen</string>
    <string name="permission_storage_description"><b>{md-sd-storage} Speicher</b>\nUm die OpenStreetMap Kartendaten zu speichern</string>
    <string name="permission_internet_description"><b>{md-network-cell} Internet</b>\nUm die OpenStreetMap Karten herunterzuladen</string>
    <string name="data_gathered_position_description"><b>{md-map} Position</b>\nUm die Entfernung zum Wegpunkt anzuzeigen. Diese Daten werden jedoch nicht an Dritte weitergegeben</string>
    <string name="data_gathered_net_description"><b>{md-phone-android} Verkehrsdaten</b>\nBeim Abrufen von OpenStreetMap-Kartendaten wird deine IP-Adresse übertragen</string>
    <string name="writeMail">Wenn du mit mir Kontakt aufnehmen willst, schreibe eine E-Mail an</string>
    <string name="legal"><b>Martin Brylski</b>\nHolbeinstraße 96\n01309 Dresden</string>
    <string name="legalIntro">Diese App wird bereit gestellt von</string>
    <string name="email">info@martinbrylski.de</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Wegpunkte</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Wegpunkte</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="permission_explanation_1">Um die Entfernung und die Karte der Wegpunkte anzuzeigen sind bestimmte Berechtigungen notwendig.</string>
    <string name="permission_explanation_2">Du musst alle Berechtigungen in den Einstellungen manuell freigeben.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_maps">OSMDroid Karten</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>