<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waypoint_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.martinbrylski.waypoints.MainActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="noScroll"
            app:toolbarId="@+id/toolbar">

            <org.osmdroid.views.MapView
                android:id="@+id/activityMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/waypoint_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginBottom="0dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="16dp"
            tools:context="de.martinbrylski.waypoints.ui.waypoints.WaypointDetailFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/text_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/description"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:id="@+id/txtDetailArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/coordinates"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:id="@+id/txtDetailCoordinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/txtDetailDistanceHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="@dimen/text_normal"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtDetailDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textColor="@android:color/black"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/text_large"
                        android:visibility="gone" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <com.joanzapata.iconify.widget.IconButton
                        android:id="@+id/btShowAndroidMap"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showOnAndroidMap" />

                    <com.joanzapata.iconify.widget.IconButton
                        android:id="@+id/btShowLocalMap"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/showOnLocalMap" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>